add Logo and Mascot

--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     width: 1200px;
     height: 627px;
+    font-family: 'Notable', sans-serif;
 }
 
 div.field>div,
