Change font and Edit app.js for text and logo position

--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Anton');
+
 #container {
     background-image: url("../img/Field.jpg");
     background-repeat: no-repeat;
